# scanner-invoice

./: app.py  packages.txt  pyproject.toml  requirements.txt
