[project]
name = "scanner-python"
version = "0.1.0"
description = ""
authors = [
    {name = "CCT",email = "nick202153@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "paddleocr (>=2.7.3,<2.7.5)",
    "paddlepaddle (>=2.6.1,<2.6.2)",
    "numpy (>=1.26.4,<1.26.5)",
    "pillow (>=12.0.0,<13.0.0)",
    "pyzbar (>=0.1.9,<0.2.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "streamlit (>=1.51.0,<2.0.0)",
    "streamlit-option-menu (>=0.4.0,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
